src/components/index.css
/* Global Styles */
html,
body {
  font-size: 18px !important;
  padding: 0;
  margin: 0;
  -webkit-font-smoothing: subpixel-antialiased;
}
p,
ul,
li {
  line-height: 1.5 !important;
}
h1 {
  font-size: calc(2vw + 20px);
  margin-bottom: 0;
}
blockquote {
  background-color: #d3d3d3;
  padding: 1rem 2rem;
  margin: 0;
}
blockquote footer {
  margin: 12px 0 0 12px;
}
button {
  font-size: large !important;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 16px !important;
  min-height: 25px;
}

/* Global Classes */
.title-bar {
  display: flex;
}
.title-bar-text {
  width: 100%;
}
.title-bar-controls {
  width: 20px;
}
.flex-break {
  display: flex;
}
.win-space {
  padding: 3vh 8vw;
}
.main-win {
  max-width: 960px;
  z-index: 1;
  left: 0;
  right: 0;
  top: 5vh;
  position: absolute;
  margin: auto;
}
.mine-win {
  width: 378px;
  z-index: 1;
  left: 0;
  right: 0;
  top: 5vh;
  position: absolute;
  margin: auto;
}

/* About.js */
.About-top {
  margin: 5vh 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.About-top-txt {
  margin-right: 15px;
  max-width: 850px;
}
.About-img {
  margin: 0 3vw 0 0;
  max-height: 200px;
  border-left: 2px solid white;
  border-top: 2px solid white;
  border-right: 3px solid black;
  border-bottom: 3px solid black;
}

/* Articles.js */
.Article-h2 {
  font-size: larger;
}
.Article-title {
  display: flex;
  align-items: center;
}

/* Block.js */
.Block {
  width: 40px;
  height: 40px;
  float: left;
  cursor: pointer;
}

.Block-active {
  box-shadow: inset -1px -1px #ffffff, inset 1px 1px #0a0a0a,
    inset -2px -2px #dfdfdf, inset 2px 2px #808080;
}

/* Board */
.Board {
  width: 378px;
}

/* Projects.js */
.Project {
  margin-top: 12px !important;
  padding-top: 22px !important;
  background: #fff;
  box-shadow: inset -1px -1px #fff, inset 1px 1px grey, inset -2px -2px #dfdfdf,
    inset 2px 2px #0a0a0a;
  padding: 12px 8px;
  margin: 0;
  font-family: 'Pixelated MS Sans Serif', Arial;
}
.Project-h2 {
  font-size: 18px;
  padding-left: 22px;
}

/* Icons.js */
.Icons {
  width: 70px;
  max-height: calc(100vh - 25px);
}

/* Media Queries */
@media only screen and (max-width: 700px) {
  .About-top,
  .flex-break {
    flex-direction: column;
  }
  .tree-view {
    width: 65vw !important;
  }
  .About-img {
    margin: auto 10px 30px auto;
    max-height: 250px;
  }
}

